fix(core): visible incorrect initial position from `TuiDropdownComponent` & `TuiHintComponent` without animation & ngZoneEventCoalescing (#3529)

--- a/projects/core/directives/hint/hint.style.less
+++ b/projects/core/directives/hint/hint.style.less
@@ -37,6 +37,10 @@
             drop-shadow(0 0.75rem 0.75rem rgba(0, 0, 0, 0.04)) drop-shadow(0 0.25rem 0.375rem rgba(0, 0, 0, 0.05));
     }
 
+    &:not([style*='top']) {
+        visibility: hidden;
+    }
+
     &._untouchable {
         pointer-events: none;
     }
